syntax = "proto3";

import "meta_response.proto";

option java_package = "t.it.simplespringapp.models.responses";
option java_multiple_files = true;

message WebResponse {
  string data = 10;
  MetaResponse meta = 11;
}