syntax = "proto3";

option java_package = "t.it.simplespringclient.models.responses";
option java_multiple_files = true;

message MetaResponse{
  string code = 1;
  string message = 2;
}