syntax = "proto3";

package t.it.simplespringapp.services;

import "web_response.proto";
import "google/protobuf/empty.proto";

option java_package = "t.it.simplespringclient.services";
option java_multiple_files = true;

service PingService{
  rpc Ping(google.protobuf.Empty) returns (WebResponse);
}